// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the button component. compontent snapshots primary big disabled 1`] = `
<div>
  <button
    aria-label="big inverse button"
    class="display-flex usa-button usa-button--outline text-gray-70 bg-base-lighter usa-button--big"
    data-testid="button"
  >
    <span
      class="padding-top-05 padding-x-05"
    >
      Big Inverse Button
    </span>
  </button>
</div>
`;

exports[`Tests for the button component. compontent snapshots secondary button 1`] = `
<div>
  <button
    aria-label="Secondary button"
    class="display-flex usa-button usa-button--outline "
    data-testid="button"
  >
    <span
      class="padding-top-05 padding-x-05"
    >
      Submit
    </span>
    <div>
      <svg
        aria-hidden="true"
        aria-label="add icon"
        class="usa-icon--size-3"
        fill="currentColor"
        role="img"
      >
        <use
          href="sprite.svg#add"
        />
      </svg>
    </div>
  </button>
</div>
`;
